Work with reactive data and without useless recomputations
Add modal update page.

--- a/lib/bower/bower.json
+++ b/lib/bower/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "licencepicker",
+  "name": "Licensepicker",
   "version": "0.0.1",
   "dependencies": {
     "bootstrap-select": "v1.9.4",
